[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyshp"
authors = [
    {name = "Joel Lawhead", email = "jlawhead@geospatialpython.com"},
]
maintainers = [
    {name = "Karim Bahgat", email = "karim.bahgat.norway@gmail.com"}
]
readme = "README.md"
keywords = ["gis", "geospatial", "geographic", "shapefile", "shapefiles"]
description = "Pure Python read/write support for ESRI Shapefile format"
license = "MIT"
license-files = ["LICENSE.TXT"]
dynamic = ["version"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
]

[project.optional-dependencies]
dev = ["pyshp[test]", "pre-commit", "ruff"]
test = ["pytest"]

[project.urls]
Repository = "https://github.com/GeospatialPython/pyshp"

[tool.hatch.build.targets.sdist]
only-include = ["src", "shapefiles", "test_shapefile.py"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = {"src" = ""}  # move from "src" directory for wheel

[tool.hatch.version]
path = "src/shapefile.py"

[tool.pytest.ini_options]
markers = [
    "network: marks tests requiring network access",
    "slow: marks other tests that cause bottlenecks",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"


