[metadata]
name = pyshp
version = attr: shapefile.__version__
description = Pure Python read/write support for ESRI Shapefile format
long_description = file: README.md
long_description_content_type = text/markdown
author = Joel Lawhead
author_email = jlawhead@geospatialpython.com
maintainer = Karim Bahgat
maintainer_email = karim.bahgat.norway@gmail.com
url = https://github.com/GeospatialPython/pyshp
download_url = https://pypi.org/project/pyshp/
license = MIT
license_files = LICENSE.TXT
keywords = gis, geospatial, geographic, shapefile, shapefiles
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: GIS
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
py_modules = shapefile
python_requires = >=2.7

[bdist_wheel]
universal=1
